@@ -30,7 +30,14 @@ export PHPPGADMIN_HTTPD_ROOT_SYMBOL_LINK="${HTTPD_SERVERROOT}/phppgadmin"
 export PHPPGADMIN_HTTPD_CONF="${HTTPD_CONF_DIR}/phppgadmin.conf"
 
 # Install phpPgAdmin with binary packages.
-if [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
+if [ X"${DISTRO}" == X'SUSE' ]; then
+    if [ X"${DISTRO_CODENAME}" == X'mantis' ]; then
+        export PHPPGADMIN_USE_SOURCE='NO'
+        export PHPPGADMIN_HTTPD_ROOT="${HTTPD_DOCUMENTROOT}/phpPgAdmin"
+        export PHPPGADMIN_HTTPD_ROOT_SYMBOL_LINK="${PHPMYADMIN_HTTPD_ROOT}"
+        export PHPPGADMIN_HTTPD_CONF="${HTTPD_CONF_DIR}/phppgadmin"
+    fi
+elif [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
     export PHPPGADMIN_USE_SOURCE='NO'
     export PHPPGADMIN_HTTPD_ROOT="/usr/share/phppgadmin"
     export PHPPGADMIN_HTTPD_ROOT_SYMBOL_LINK="${PHPPGADMIN_HTTPD_ROOT}"
@@ -42,4 +49,8 @@ elif [ X"${DISTRO}" == X"FREEBSD" -o X"${DISTRO}" == X'OPENBSD' ]; then
     export PHPPGADMIN_HTTPD_CONF="${HTTPD_CONF_DIR}/phppgadmin.conf"
 fi
 
-export PHPPGADMIN_CONFIG_FILE="${PHPPGADMIN_HTTPD_ROOT}/conf/config.inc.php"
+if [ X"${DISTRO}" == X'SUSE' ]; then
+    export PHPPGADMIN_CONFIG_FILE="/etc/phpPgAdmin/config.inc.php"
+else
+    export PHPPGADMIN_CONFIG_FILE="${PHPPGADMIN_HTTPD_ROOT}/conf/config.inc.php"
+fi
